<resources>
    <string name="app_name">TemperatureConversion</string>
    <string name="hint">Please enter the temperature and select the conversion mode</string>
    <string name="hello">hello</string>
    <string name="FtoC">F to C</string>
    <string name="CtoF">C to F</string>
    <string name="label_add1">+1 point</string>
    <string name="label_add2">+2 points</string>
    <string name="label_add3">+3 points</string>
    <string name="btn_reset_label">Reset</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="sousuo">搜索</string>

    <string name="tishi">Please select your benchmark currency</string>
    <string name="dollar">dollar</string>
    <string name="rmb">RMB</string>
    <string name="yen">yen</string>
    <string name="won">won</string>
    <string name="euro">Euro</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">Openlist</string>
</resources>
