<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input"
        android:layout_width="316dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="253dp"
        android:gravity="center"
        android:autofillHints="@string/hint"
        android:hint="@string/hint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/FtoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="433dp"
        android:layout_toRightOf="@id/CtoF"
        android:text="@string/FtoC" />

    <Button
        android:id="@+id/CtoF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="433dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:text="@string/CtoF" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="197dp"
        android:layout_height="115dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="119dp"
        android:gravity="center"
        android:text="@string/hello"
        android:textSize="18sp" />
</RelativeLayout>